--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 }
 
 .bg-img {
+  filter: grayscale(1);
   z-index: -9;
   position: fixed;
   top: 0;
@@ -325,12 +326,13 @@
   }
 
   .bg-img {
+    filter: grayscale(1);
     z-index: -9;
     position: fixed;
-    top: 45%;
+    top: 0%;
     right: 0;
     bottom: 0;
-    left: 64%;
+    left: 32%;
     background-image: url("../assets/img/ramon.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -430,12 +432,13 @@
   }
 
   .bg-img {
+    filter: grayscale(1);
     z-index: -9;
     position: fixed;
-    top: 45%;
+    top: 0;
     right: 0;
     bottom: 0;
-    left: 64%;
+    left: 32%;
     background-image: url("../assets/img/ramon.png");
     background-repeat: no-repeat;
     background-size: cover;
