--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -140,6 +140,62 @@
     font-size: 9.1rem;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@600&display=swap');
+
+.logo-height{
+  height: 6rem;
+  margin: 5px;
+  padding: 5px;
+}
+.punto-height{
+  height: 2rem;
+  margin: 25px;
+  padding: 1px;
+
+}
+.wave{
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  font-size: 6em;
+  color: white;
+  z-index: 10000;
+  -webkit-box-reflect: below  0 linear-gradient(transparent, rgba(255, 255, 255, 0.175));
+}
+.wave span{
+  display: inline-block;
+  animation: animation-wave 1s infinite;
+  animation-delay: calc(0.1s*var(--item));
+}
+.wave_out{
+  animation: wave_out 1s ease-in-out;
+}
+.main{
+  color: aqua;
+}
+.d-none{
+  display: none;
+}
+
+@keyframes animation-wave{
+  0%,40%,100%{transform: translateY(0);}
+  20%{
+      transform: translateY(-20px);
+  }
+}
+@keyframes wave_out {
+  0%{
+      clip-path: circle(150% at 100% 0);
+  }
+  100%{
+    clip-path: circle(1.1% at 90% 95%);
+  }
+}
+
+
 /*Ajuste de video - responsive*/
 @media only screen and (min-width: 320px) and (max-width: 768px) {
     .carousel-item {
@@ -163,7 +219,174 @@
         padding: 0 1.875rem;
         width: 100%;
     }
+
+    .wave{
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        font-size: 3em;
+        color: white;
+        z-index: 10000;
+        -webkit-box-reflect: below  0 linear-gradient(transparent, rgba(255, 255, 255, 0.175));
+      }
+    
+      .logo-height{
+        height: 2.8rem;
+        margin: 2.5px;
+        padding: 2.5px;
+      }
+    
+      .punto-height{
+        height: .8rem;
+        margin: 12.5px;
+        padding: 1px;
+      
+      }
+    
+      .d-none{
+        display: none;
+      }
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .tap {
+      opacity: 1;
+      animation: bounce 1s infinite alternate;
+      -webkit-animation: bounce 0.5s cubic-bezier(0.5, 0.6, 0.6, 1) infinite alternate;
+      animation: bounce 0.5s cubic-bezier(0.5, 0.6, 0.6, 1) infinite alternate;
+    }
+  
+    .bg-jumbotron04 {
+      background-image: url(../assets/img/Safety2.png);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      -o-object-fit: cover;
+      object-fit: cover;
+      -ms-interpolation-mode: nearest-neighbor;
+      image-rendering: -moz-crisp-edges;
+      image-rendering: pixelated;
+    }
+  
+    .bg-jumbotron04:hover {
+      background-image: url(../assets/img/Safety.png);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      -o-object-fit: cover;
+      object-fit: cover;
+      -ms-interpolation-mode: nearest-neighbor;
+      image-rendering: -moz-crisp-edges;
+      image-rendering: pixelated;
+      -webkit-animation: animate 0.8s cubic-bezier(0.2, 0.6, 0.2, 1);
+      animation: animate 0.8s cubic-bezier(0.2, 0.6, 0.2, 1);
+      -webkit-animation-fill-mode: backwards;
+      animation-fill-mode: backwards;
+    }
+  
+    .bg-jumbotron03 {
+      background-image: url(../assets/img/pf-s73-eve-set-14-mockup3343432.png);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      -o-object-fit: cover;
+      object-fit: cover;
+      -ms-interpolation-mode: nearest-neighbor;
+      image-rendering: -moz-crisp-edges;
+      image-rendering: pixelated;
+    }
+  
+    .bg-jumbotron03:hover {
+      background-image: url(../assets/img/Sisdeci.png);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      -o-object-fit: cover;
+      object-fit: cover;
+      -ms-interpolation-mode: nearest-neighbor;
+      image-rendering: -moz-crisp-edges;
+      image-rendering: pixelated;
+      -webkit-animation: animate 0.8s cubic-bezier(0.2, 0.6, 0.2, 1);
+      animation: animate 0.8s cubic-bezier(0.2, 0.6, 0.2, 1);
+      -webkit-animation-fill-mode: backwards;
+      animation-fill-mode: backwards;
+    }
+  
+    .bg-img {
+      filter: grayscale(1);
+      z-index: -9;
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 32%;
+      background-image: url("../assets/img/ramon.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      -webkit-animation: bg-photo 1.2s cubic-bezier(0.5, 0.6, 0.6, 1);
+      animation: bg-photo 1.2s cubic-bezier(0.5, 0.6, 0.6, 1);
+      -webkit-animation-duration: 1.2s;
+      animation-duration: 1.2s;
+      -webkit-animation-timing-function: cubic-bezier(0.5, 0.6, 0.6, 1);
+      animation-timing-function: cubic-bezier(0.5, 0.6, 0.6, 1);
+      -webkit-animation-delay: 0s;
+      animation-delay: 0s;
+      -webkit-animation-iteration-count: 1;
+      animation-iteration-count: 1;
+      -webkit-animation-direction: normal;
+      animation-direction: normal;
+      animation-fill-mode: backwards;
+      -webkit-animation-play-state: running;
+      animation-play-state: running;
+      -webkit-animation-name: bg-photo;
+      animation-name: bg-photo;
+      -webkit-animation-fill-mode: backwards;
+      animation-fill-mode: backwards;
+    }
+  
+    .ft-regulador {
+      font-size: 4.4rem;
+      font-weight: bolder;
+    }
+  
+    .ft-p-regul {
+      font-size: 1.7rem;
+      font-weight: 500;
+    }
+    
+    .wave{
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100vh;
+      font-size: 3em;
+      color: white;
+      z-index: 10000;
+      -webkit-box-reflect: below  0 linear-gradient(transparent, rgba(255, 255, 255, 0.175));
+    }
+    
+    .logo-height{
+      height: 2.8rem;
+      margin: 2.5px;
+      padding: 2.5px;
+    }
+    
+    .punto-height{
+      height: .8rem;
+      margin: 12.5px;
+      padding: 1px;
+    
+    }
+    
+    .d-none{
+      display: none;
+    }
+  }
 
 .b-sombreado {
     background-image: linear-gradient(#ff5000, #ff5000);
